# notekeeper

./: .gitignore  Info.plist  build.sh  build1.sh  buildModule.sh  checkMonads.hs  current_cabal_store_dir.sh  current_ghc_dir.sh  current_ghc_version.sh  find_rts_lib.sh  main.m  notekeeper.cabal
3/: Capability.thr_o  _fixed_Capability.thr_o
Assets.xcassets/AppIcon.appiconset/: Contents.json
ClothingList/: ClothingList.cabal
ClothingList/src/: ClothingList.hs
Module1/: Module1.cabal  buildModule.sh  current_cabal_store_dir.sh  current_ghc_dir.sh  current_ghc_version.sh  find_rts_lib.sh
Module1/src/: Module1.hs
Module3/: Module3.cabal
Module3/src/: Module3.hs
modules/: .ghc.environment.aarch64-darwin-9.5.20221014
modules/Camera/: Camera.cabal  cabal.project
modules/ClothingView/: ClothingView.cabal
modules/ClothingView/src/: ClothingView.hs
modules/Gcd/: Gcd.cabal
modules/Gcd/src/: Gcd.hs
modules/IOHelpers/: IOHelpers.cabal
modules/Module1/: Module1.cabal
modules/Module1/src/: Module1.hs  module1_state.c
modules/Module2/: Module2.cabal  cabal.project
modules/Module2/src/: Module2.hs
modules/Objc/: Objc.cabal
modules/Objc/src/: Objc.hs  ObjcGlobalMixStorage.hs  ObjcHelpers.hs  ObjcMixStorage.hs  ObjcMsgOps.hs  getCurrentTime.c
modules/Ui/: Ui.cabal  cabal.project
modules/Ui/src/: Ui.hs
modules/UiKit/: UiKit.cabal
modules/UiKit/src/: UiKit.hs  UiKitHelpers.hs
modules/Utils/: Utils.cabal  cabal.project
modules/Utils/src/: Utils.hs
modules/View/: View.cabal  cabal.project
modules/View/src/: Tree.hs
modules/View/src/View/: Color.hs  Image.hs  Label.hs  Layout.hs  View.hs
modules/Wardrobe/: Wardrobe.cabal
modules/Wardrobe/src/: Wardrobe.hs
modules/notekeeper/: cabal.project  notekeeper.cabal
modules/notekeeper/src/: App.hs  AvHelpers.hs  CheckLoading.hs  CurrentTime.hs  Gcd.hs  HsMain.hs  IOHelpers.hs  Menu.hs_  Module1.hs  ObjcFunPtr.hs  ObjcMixStorage.hs  ObjcMsg.hs  ObjcTypes.hs  Ui.hs  UiKitHelpers.hs  Ui_backup.hs_  funcSt.c  objc_msgSendN.c
modules/notekeeper/src/View/: Image.hs  Label.hs
modules/notekeeper/src/_old/: 1.html  Ui_old.hs_  Window.hs_
notekeeper.xcodeproj/: project.pbxproj
notekeeper.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
notekeeper.xcodeproj/xcshareddata/xcschemes/: notekeeper.xcscheme
root/: cabal.project  root.cabal
src/: App.hs  App_old.hs  Camera.hs  Gcd.hs  HsMain.hs  HsMain_old.hs  Module1.hs  Objc.hs  ObjcClassManipulations.hs  ObjcGlobalMixStorage.hs  ObjcHelpers.hs  ObjcMsg1.hs  ObjcMsgHelpers.hs  ObjcMsgOps.hs  ObjcMsgSt.hs  Qwe.hs  Ui.hs  UiKit.hs  UiKitHelpers.hs  UiKitText.hs  funcSt.c  main.html
src/View/: Color.hs  Image.hs  Label.hs  Layout.hs  View.hs
