cabal-version: 2.4
name: notekeeper
version: 0.1.0.0
author: username
maintainer: email@example.com

library
  exposed-modules:
     App
   , AvHelpers
   , Camera
   , IOHelpers
   , HsMain
   , ObjcTypes
   , ObjcMsgSt
   , ObjcMsgOps
   , ObjcMsgHelpers
   , ObjcMsg
   , ObjcMixStorage
   , ObjcGlobalMixStorage
   , ObjcHelpers
   , ObjcFunPtr
   , ObjcClassManipulations
   , Objc
   , UiKit
   , UiKitHelpers
   , Gcd
   , Window
   , Ui
   , Menu
   , View.View
   , View.Color
   , View.Image
   , View.Label
  c-sources:
     src/funcSt.c
   , src/objc_msgSendN.c
   , src/getCurrentTime.c
  build-depends:
     base
   , containers
   , random
--   , aeson
   , vector
--   , vector-algorithms
--   , megaparsec
--   , network
--   , lens
--   , transformers == 0.5.6.2
--   , distributive
  hs-source-dirs: src
  default-language: Haskell2010
