cabal-version: 2.4
name: notekeeper
version: 0.1.0.0
author: username
maintainer: email@example.com

library
  exposed-modules:
    App
    AvHelpers
    Camera
    CurrentTime
    Gcd
    HsMain
    IOHelpers
    Objc
    ObjcClassManipulations
    ObjcFunPtr
    ObjcGlobalMixStorage
    ObjcHelpers
    ObjcMixStorage
    ObjcMsg
    ObjcMsgHelpers
    ObjcMsgOps
    ObjcMsgSt
    ObjcTypes
    Tree
    Ui
    UiKit
    UiKitHelpers
    UiKitText
    View.Color
    View.Image
    View.Label
    View.Layout
    View.View
  c-sources:
    src/funcSt.c
    src/objc_msgSendN.c
    src/getCurrentTime.c
--  ghc-options:
--   -optc -I/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS.sdk/usr/include
--   -optl -L/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS.sdk/usr/lib
  build-depends:
    base,
    containers,
    random,
    -- vector,
    numeric-limits,
    time,
   
--   aeson
--   vector-algorithms
--   megaparsec
--   network
--   lens
--   transformers == 0.5.6.2
--   distributive
  hs-source-dirs: src
  default-language: Haskell2010
