cabal-version: 2.4
name: root
version: 0.1.0.0
author: username
maintainer: email@example.com

library
  exposed-modules:

  c-sources:
  build-depends:
    base,
    containers,
    random,
    -- vector,
    numeric-limits,
    time,

    Objc,
    UiKit,
    Camera,
    View,
    Ui,
    Utils,
    Module1,
    Module2,
  hs-source-dirs: src
  default-language: Haskell2010
