cabal-version: 2.4
name: Module1
version: 0.1.0.0
author: username
maintainer: email@example.com

library
  exposed-modules:
    Module1
  ghc-options:
--   -optc -I/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS.sdk/usr/include
--   -optl -L/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS.sdk/usr/lib
  build-depends:
    base,
    --containers,
    random,

    Objc,
    Utils,
    Ui,
    Gcd,
    View,
    UiKit,
    -- vector,
    -- numeric-limits,
    -- time,
  c-sources:
    src/module1_state.c
   
--   aeson
--   vector-algorithms
--   megaparsec
--   network
--   lens
--   transformers == 0.5.6.2
--   distributive
  hs-source-dirs: src
  default-language: Haskell2010
