cabal-version: 3.8
name: Ui
version: 0.1.0.0
author: username
maintainer: email@example.com

library
  exposed-modules:
    Ui
  ghc-options:
--   -optc -I/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS.sdk/usr/include
--   -optl -L/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS.sdk/usr/lib
  build-depends:
    base,
    --containers,
    random,
    Objc,
    -- vector,
    -- numeric-limits,
    -- time,
   
--   aeson
--   vector-algorithms
--   megaparsec
--   network
--   lens
--   transformers == 0.5.6.2
--   distributive
  hs-source-dirs: src
  default-language: GHC2021
